--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,10 +4,10 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
-      %th Rating
-      %th Release Date
-      %th More Info
+      %th#title_header{:class => ("hilite" if @sort == "title")}= link_to "Movie Title", :sort => "title", :id => "title_header"
+      %th= "Rating"
+      %th#release_date_header{:class => ("hilite" if @sort == "release_date")}= link_to "Release Date", :sort => "release_date", :id => "release_date_header"
+      %th= "More Info"
   %tbody
     - @movies.each do |movie|
       %tr
